--- a/HTMLOgrendiklerim.html
+++ b/HTMLOgrendiklerim.html
@@ -12,8 +12,7 @@
     <div class="GenericHeader">
         <h3 id="header1">Konular</h3>
         <ul>
-            
-
+            <li>Deneme</li>
         </ul>
     </div>
 </body>
